# authsrv

./: .gitignore  Cargo.toml  README.md  Rocket.toml  showtoks.sh  test.py  test.sh
db/: create.sql
docker/: Dockerfile  README.md  start.sh
migrations/2021-07-20-032946_create_users/: up.sql
migrations/2021-07-20-032946_make_tables/: down.sql  up.sql
src/: cache.rs  db.rs  json.rs  main.rs  redis_support.rs  rocktypes.rs  schema.rs  state.rs
src/api/: admin.rs  auth.rs  mod.rs  root.rs  test.rs
src/model/: mod.rs  schema.rs  scopes.rs  token.rs  user.rs
