[package]
name = "authsrv"
version = "0.1.0"
authors = ["Tim Newsham <tim.newsham@gmail.com>"]
edition = "2018"

[dependencies]
rocket = { version = "0.5.0-rc.1", features = ["json"] }
diesel = { version = "1.3", features = ["postgres", "r2d2", "chrono"] }
diesel_migrations = "1.3"
rust-argon2 = "0.8"
rand = "0.8.4"
hex = "0.4.3"
redis = "0.21.0"
rmp-serde = "0.15.5"
r2d2 = "0.8.9"
chrono = { version = "0.4.19", features = ["serde"] }

[dependencies.rocket_sync_db_pools]
version = "0.1.0-rc.1"
default-features = false
features = ["diesel_postgres_pool"]
